Make unit tests compile
